--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material mkdocs-static-i18n==1.2.0 print-site
+      - run: pip install mkdocs-material mkdocs-static-i18n==1.2.0 mkdocs-print-site-plugin
       - run: mkdocs gh-deploy --force
 #jobs:
 #  build:
